Fix broken vertical scrolling on mobile

--- a/css-compiled/template.css
+++ b/css-compiled/template.css
@@ -16,7 +16,11 @@
     font-size: 0.9rem; }
 
 html, body {
-  height: 100% !important; }
+  height: 100% !important;
+  overflow-x: visible !important; }
+
+html.sb-active, html.sb-active body {
+  overflow-x: hidden !important; }
 
 body {
   background: #fff;
